change string to list of strings at files work